--- a/LatexCommands.tex
+++ b/LatexCommands.tex
@@ -36,6 +36,9 @@
 \newcommand{\abs}[1]{\left|#1\right|}                   % Absolute value function
 \newcommand{\ubrc}[2]{\underbrace{#1}_\text{#2}}        % Under brace with text
 
+    % Change Math commands
+\renewcommand{\tilde}[1]{\widetilde{#1}}
+
     % Fluid Mechanics
 \newcommand{\Ren}{\text{Re}}        % Reynolds number
 \newcommand{\Sc}{\text{Sc}}         % Schmidt number
