--- a/BeamerTemplate/beamerouterthemedecolines.sty
+++ b/BeamerTemplate/beamerouterthemedecolines.sty
@@ -25,11 +25,11 @@
 
 % Lengths
 \newlength{\headerheight}
-\setlength{\headerheight}{.045\paperheight}
+\setlength{\headerheight}{.035\paperheight}
 \newlength{\beamer@decolines@lineup}
-\setlength{\beamer@decolines@lineup}{.025\paperheight}
+\setlength{\beamer@decolines@lineup}{.015\paperheight}
 \newlength{\beamer@decolines@linemid}
-\setlength{\beamer@decolines@linemid}{.015\paperheight}
+\setlength{\beamer@decolines@linemid}{.01\paperheight}
 \newlength{\beamer@decolines@linebottom}
 \setlength{\beamer@decolines@linebottom}{.01\paperheight}
 
@@ -85,7 +85,7 @@
   \vbox{}\vskip-.5\beamer@leftmargin%
   \begin{beamercolorbox}[sep=\beamer@leftmargin,#1,wd=\the\@tempdima]{}
     \usebeamerfont{frametitle}\usebeamercolor[bg]{framesubtitle}%
-    \vbox{}\vskip0ex%
+    %\vbox{}\vskip0ex%
     \if@tempswa\else\csname beamer@fte#1\endcsname\fi%
     \strut\insertframetitle\strut\par%
     {%
