Add Rossby number

--- a/LatexCommands.tex
+++ b/LatexCommands.tex
@@ -42,3 +42,4 @@
     % Fluid Mechanics
 \newcommand{\Ren}{\text{Re}}        % Reynolds number
 \newcommand{\Sc}{\text{Sc}}         % Schmidt number
+\newcommand{\Ro}{\text{Ro}}         % Rossby number
