Update standard dimensionless quantities

--- a/LatexCommands.tex
+++ b/LatexCommands.tex
@@ -40,6 +40,9 @@
 \renewcommand{\tilde}[1]{\widetilde{#1}}
 
     % Fluid Mechanics
-\newcommand{\Ren}{\text{Re}}        % Reynolds number
-\newcommand{\Sc}{\text{Sc}}         % Schmidt number
-\newcommand{\Ro}{\text{Ro}}         % Rossby number
+\newcommand\Rey{\mbox{\textit{Re}}}   % Reynolds number
+\newcommand\Sch{\mbox{\textit{Sc}}}   % Schmidt number
+\newcommand\Pra{\mbox{\textit{Pr}}}   % Prandtl number
+\newcommand\Ric{\mbox{\textit{Ri}}}   % Richardson number
+\newcommand\Pec{\mbox{\textit{Pe}}}   % Peclet number
+\newcommand\Ros{\mbox{\textit{Ro}}}   % Rossby number
